# pirate_llm

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  example.env  main.py  mkdocs.yml  pyproject.toml  pyrightconfig.json
configs/: frigate.py  frigate_125m_full.py  frigate_360m_full.py  galleon.py  sloop.py
data/datasets/pirate_enhanced/: metadata.json  pirate_bpe.json  recipe.json
data/datasets/tiny_pirate_stories/: metadata.json  recipe.json
data/sloop/: pirate_bpe.json
data/sources/cosmopedia_stories/: source.json
data/sources/cosmopedia_wikihow/: source.json
data/sources/gutenberg_books/: source.json
data/sources/tiny_stories_pirate/: source.json
dataset/: pirate_stories.py  piratize.py  tiny_stories.py  tokenize_corpus.py  tokenize_ds.py
docs/: adding-a-model.md  architecture.md  eval.md  getting-started.md  index.md  llm-chess.md  todo.md  vast-ai.md
evals/: prompts.jsonl
evals/llm-chess/: arena.py  calibrate.py  elo.py  export.py  judges.py  leaderboard.py  models.py  prompts.jsonl  run.py
evals/llm-chess/results/: calibration.jsonl  head_to_head.csv  leaderboard.csv  matches.csv  matches.jsonl  matches.sloop.jsonl
nanobeard/: __init__.py  config.py  data.py  optim.py  publish.py  sample.py  sft.py  sft_data.py  tokenizer_hash.py  train.py
nanobeard/dataset_pipeline/: build.py  log.py  pirate_stories.py  piratize.py  push_to_hf.py  sources.py  tiny_stories.py  tokenize_corpus.py  tokenize_ds.py
nanobeard/eval/: gallery.py  perplexity.py  run.py
nanobeard/models/: __init__.py  frigate.py  naming.py  sloop.py
scripts/: export_onnx.py  publish_hf.py  publish_space.py  vast_bootstrap.sh  vast_destroy.sh  vast_launch.sh
space/: README.md  app.py  requirements.txt
tests/: conftest.py  test_ckpt_roundtrip.py  test_config.py  test_data.py  test_dataset_pipeline.py  test_epochs.py  test_eval.py  test_frigate.py  test_legacy_ckpt.py  test_llm_chess.py  test_lr_schedule.py  test_model_contract.py  test_naming.py  test_optim.py  test_publish.py  test_registry.py  test_sample.py  test_sft_data.py  test_tokenizer_hash.py  test_train_smoke.py
training/: config.py  data.py  model.py  sample.py  sft_data.py  sft_train.py  train.py
