[project]
name = "pirate-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arrr>=1.0.6",
    "datasets>=4.8.5",
    "huggingface-hub>=0.27.0",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "tokenizers>=0.23.1",
    "torch>=2.12.0",
    "wandb>=0.19.0",
]
